--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #121212;
+    background-color: #000000;
     color: #ffffff;
 }
 
@@ -16,4 +16,23 @@ h1{
     text-align: center;
     margin-top: 20px;
     font-size: 2.5em;
+}
+
+#ad-bottom {
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+}
+#ad-bottom ins {
+    display: inline-block;
+    width: 100%;
+    max-width: 728px;
+    height: 90px;
+}
+#ad-bottom ins.eas6a97888e2 {
+    width: 100%;
+    height: 90px;
+}
+#ad-bottom script {
+    display: none;
 }
